# VxSdk.NET

./: .gitignore  README.md  build-target.cmd  build.cmd
Nuget/: VxSdk.NET-Media.nuspec  VxSdk.NET-Media.props  VxSdk.NET-Media.targets  VxSdk.NET.nuspec  VxSdk.NET.props  VxSdk.NET.targets
VxSdkNet/: CMakeLists.txt  VxSdk.NET.sln  VxSdk.NET.vcxproj  VxSdk.NET.vcxproj.filters  VxSdkNetKey.snk  packages.config
VxSdkNet/Include/: AccessPoint.h  AlarmInput.h  AnalyticBehavior.h  AnalyticConfig.h  AnalyticSession.h  Bookmark.h  BookmarkLock.h  Clip.h  Configuration.h  DataInterface.h  DataObject.h  DataSession.h  DataSource.h  DataSourceConfig.h  DataStorage.h  DbBackup.h  DbBackups.h  Device.h  DeviceAssignment.h  DeviceSearch.h  Diagnostics.h  Discovery.h  DiscoveryRequest.h  Drawing.h  Driver.h  Event.h  Export.h  ExportClip.h  ExportEstimate.h  ExportStream.h  ExportStreamClip.h  File.h  FileRecovery.h  Gap.h  GridPoint.h  InternalEvent.h  LdapValidationCredentials.h  License.h  LicenseFeature.h  LicenseSup.h  (+95 more)
VxSdkNet/Source/: AccessPoint.cpp  AlarmInput.cpp  AnalyticBehavior.cpp  AnalyticConfig.cpp  AnalyticSession.cpp  AssemblyInfo.cpp  Bookmark.cpp  BookmarkLock.cpp  Clip.cpp  Configuration.cpp  DataInterface.cpp  DataObject.cpp  DataSource.cpp  DataSourceConfig.cpp  DataStorage.cpp  DbBackup.cpp  DbBackups.cpp  Device.cpp  DeviceAssignment.cpp  Discovery.cpp  Drawing.cpp  Driver.cpp  Event.cpp  Export.cpp  ExportClip.cpp  ExportStream.cpp  File.cpp  FileRecovery.cpp  Gap.cpp  License.cpp  LicenseFeature.cpp  Log.cpp  ManualRecording.cpp  Marker.cpp  Member.cpp  Monitor.cpp  MonitorCell.cpp  MonitorWall.cpp  Notification.cpp  Pattern.cpp  (+25 more)
VxSdkNetMedia/: CMakeLists.txt  VxSdk.NET-Media.sln  VxSdk.NET-Media.vcxproj  VxSdk.NET-Media.vcxproj.filters  packages.config
VxSdkNetMedia/Include/: MediaControl.h  MediaEvent.h  PelcoDataEvent.h  StreamEvent.h
VxSdkNetMedia/Source/: AssemblyInfo.cpp  MediaControl.cpp  VxSdkNetMedia.rc
